Fix checkbox alignment and hover bg

--- a/mathesar_ui/src/component-library/checkbox/Checkbox.scss
+++ b/mathesar_ui/src/component-library/checkbox/Checkbox.scss
@@ -15,7 +15,7 @@
   font-size: inherit;
   display: inline-block;
   vertical-align: baseline;
-  margin: 0 0 -0.1em 0;
+  margin: 0 0 var(--checkbox-margin-bottom, -0.1em) 0;
   width: var(--size);
   height: var(--size);
   appearance: none;
